@@ -90,3 +90,5 @@ a:active          { color: red;    }
 .category2 { background: #ffffcc; }
 .category3 { background: #ffccff; }
 .category4 { background: #99ccff; }
+/* between different sortorder-categories, print a thick line */
+.sortorderswitch { border-top: 2px solid black; }
